tests/baselines/reference/computedPropertyNames48_ES6.errors.txt
computedPropertyNames48_ES6.ts(16,6): error TS2870: This expression is always falsy. Did you mean to test something else?


==== computedPropertyNames48_ES6.ts (1 errors) ====
    declare function extractIndexer<T>(p: { [n: number]: T }): T;
    
    enum E { x }
    
    var a: any;
    
    extractIndexer({
        [a]: ""
    }); // Should return string
    
    extractIndexer({
        [E.x]: ""
    }); // Should return string
    
    extractIndexer({
        ["" || 0]: ""
         ~~
!!! error TS2870: This expression is always falsy. Did you mean to test something else?
    }); // Should return any (widened form of undefined)